--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue2-datepicker": "^3.9.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
