--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -5,7 +5,7 @@ name: Download-epapers
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: '0 11 * * *' # every morning at 4:30 IST 11PM UTC
+    - cron: '0 23 * * *' # every morning at 4:30AM IST 11:30PM UTC
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
