--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-pdf-app": "^2.1.0",
     "vue-router": "^3.2.0",
     "vue2-datepicker": "^3.9.1",
     "vuex": "^3.4.0"
