Update fetch latest epapers.yml

--- a/.github/workflows/fetch latest epapers.yml
+++ b/.github/workflows/fetch latest epapers.yml
@@ -27,6 +27,7 @@ jobs:
           npm run build
           echo "built completed"
           cd docs
+          mkdir epapers
           cd epapers
           echo "i am inside epapers folder"
           abhiKaTime=`date +"%H"`
