Update fetch latest epapers.yml

--- a/.github/workflows/fetch latest epapers.yml
+++ b/.github/workflows/fetch latest epapers.yml
@@ -30,7 +30,7 @@ jobs:
           cd epapers
           echo "i am inside epapers folder"          
           sevenDayOldDays=`date  --date="7 days ago" +"%d-%m-%Y"`
-          rm -r sevenDayOldDays
+          rm -r $sevenDayOldDays
           abhiKaTime=`date +"%H"`
           if [ $abhiKaTime  -eq  '23' ]
           then
