--- a/.github/workflows/copy saved epapers.yml
+++ b/.github/workflows/copy saved epapers.yml
@@ -15,11 +15,7 @@ jobs:
   Download-and-save-epapers:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.1
-
-
           
       - name: Delete old epapers
         run: |
-          echo pwd
+          pwd
