--- a/.github/workflows/copy saved epapers.yml
+++ b/.github/workflows/copy saved epapers.yml
@@ -15,10 +15,23 @@ jobs:
   Download-and-save-epapers:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.1
+
+      - name: Copy previously saved epapers
+        uses: andstor/copycat-action@v3
+        with:
+          personal_token: ${{ secrets.TOKEN }}
+          src_branch: publish
+          src_path: /epapers/.
+          dst_path: /public/epapers/
+          dst_branch: main
+          dst_owner: thelazyshell
+          dst_repo_name: ie-newspaper
           
       - name: Delete old epapers
         run: |
-          pwd
+		  pwd
           ls
           ls -l
           echo ls
